@@ -69,10 +69,10 @@ multihit_delay: 80
 // (Setting to no/0  will be like always endure)
 player_damage_delay_rate: 100
 
-// Undead type differeniate.
+// Should race or element be used to consider someone undead?
 // 0 = element undead
 // 1 = race undead
-// 2 = both
+// 2 = both (either one works)
 undead_detect_type: 0
 
 // Does HP recover if hit by an attribute that's same as your own? (Note 1)
